<resources>
    <string name="app_name">NutriTEC</string>
    <string name="username_placeholder">Nombre Apellido</string>
    <string name="RegistroMedidas">Registrar medidas</string>
    <string name="RegistroConsumo">Registrar consumo</string>
    <string name="register_ingest">REGISTRAR CONSUMO</string>
    <string name="new_product">Nuevo producto</string>
    <string name="new_recipe">Nueva receta</string>
    <string name="mealselectionlbl">Selecciona el tiempo de comida</string>
    <string name="cenalbl">Cena</string>
    <string name="afternoonsnacklbl">Merienda de la tarde</string>
    <string name="lunchlbl">Almuerzo</string>
    <string name="morningsnacklabl">Merienda de la mañana</string>
    <string name="breakfastlbl">Desayuno</string>
    <string name="medidacinturalbl">Medida de cintura</string>
    <string name="cmunit">cm</string>
    <string name="medidacuellolbl">Medida de cuello</string>
    <string name="medidacaderalbl">Medida de cadera</string>
    <string name="porcentajemusculolbl">Porcentaje de músculo</string>
    <string name="porcentajegrasalbl">Porcentaje de grasa</string>
    <string name="measureRegistryTitle">Registro de medidas fiosionómicas</string>
    <string name="NewRecipetitle">Crea una nueva receta</string>
    <string name="register_recipe">Registrar receta</string>
    <string name="NewProductTitle">Registra un nuevo producto</string>
    <string name="nameLabel">Nombre</string>
    <string name="barcodeLabel">Código de barras</string>
    <string name="portionSizeLabel">Tamaño de porción</string>
    <string name="fatPerPortionLabel">Grasa por porción (mg/porción)</string>
    <string name="energyPerPortionLabl">Energía por pocion (kCal)</string>
    <string name="proteinPerPortionLabel">Proteina por porción (mg/porción)</string>
    <string name="sodiumPerPortionLabel">Sodio por porción (mg/porción)</string>
    <string name="carbsPerPortionLabel">Carbohidratos por porción (mg/porción)</string>
    <string name="ironPerPortionLabel">Hierro por porción (mg/porción)</string>
    <string name="vitaminDLabel">Vitamina D por porción (mg/porción)</string>
    <string name="vitaminB6PerPortionLabel">Vitamina B6 por porción (mg/porción)</string>
    <string name="vitaminCPerPortionLabel">Vitamina C por porción (mg/porción)</string>
    <string name="vitaminKPerPortionLabel">Vitamina K por porción (mg/porción)</string>
    <string name="vitaminBPerPortinLabel">Vitamina B por porión (mg/porción)</string>
    <string name="vitaminB12PerPortionLabel">Vitamina B12 por porción (mg/porción)</string>
    <string name="vitaminAPerPortionLabel">Vitamina A por porción (mg/porción)</string>
    <string name="calciumPerPortionLabel">Calcio por porción (mg/porción)</string>
    <string name="register_product">Registrar producto</string>
    <string name="Register">Registrarse</string>
    <string name="newUserRegistrytitle">Regístrate en NutriTEC</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="Login_register">Iniciar sesión</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_cedula">Correo electrónico</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="invalid_id">Correo electrónico inválido</string>
</resources>