<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "10sp"
    tools:context=".NewProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/newProducttitle"
                    android:layout_width="match_parent"
                    android:layout_height="150sp"
                    android:layout_weight="1"
                    android:text="@string/NewProductTitle"
                    android:textSize="43sp" />

                <EditText
                    android:id="@+id/productNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nameLabel"
                    android:inputType="text|textCapWords" />

                <EditText
                    android:id="@+id/barcodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/barcodeLabel" />

                <EditText
                    android:id="@+id/portionSizeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint ="@string/portionSizeLabel" />

                <EditText
                    android:id="@+id/fatEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/fatPerPortionLabel" />

                <EditText
                    android:id="@+id/energyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/energyPerPortionLabl" />

                <EditText
                    android:id="@+id/proteinEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/proteinPerPortionLabel" />

                <EditText
                    android:id="@+id/sodiumEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/sodiumPerPortionLabel" />

                <EditText
                    android:id="@+id/carbohydratesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/carbsPerPortionLabel" />

                <EditText
                    android:id="@+id/ironEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/ironPerPortionLabel" />

                <EditText
                    android:id="@+id/vitaminDEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vitaminDLabel" />

                <EditText
                    android:id="@+id/vitaminB6EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vitaminB6PerPortionLabel" />

                <EditText
                    android:id="@+id/vitaminCEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vitaminCPerPortionLabel" />

                <EditText
                    android:id="@+id/vitaminKEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vitaminKPerPortionLabel" />

                <EditText
                    android:id="@+id/vitaminBEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vitaminBPerPortinLabel" />

                <EditText
                    android:id="@+id/vitaminB12EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vitaminB12PerPortionLabel" />

                <EditText
                    android:id="@+id/vitaminAEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vitaminAPerPortionLabel" />

                <EditText
                    android:id="@+id/calciumEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/calciumPerPortionLabel" />

                <Button
                    android:id="@+id/registroProductoBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_product"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#393939"
                    android:textColorLink="#919191"
                    android:textSize="18sp" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>