<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:autofillHints="emailAddress"
    >

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            app:srcCompat="@drawable/full_logo"
            tools:srcCompat="@drawable/full_logo" />

        <EditText
            android:id="@+id/emai_inpt"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_login_inpt"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_register_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Login_register"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Register"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>