<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsumableRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:padding="10sp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_weight="1"
            android:text="Registro de consumo"
            android:textSize="40sp"
            android:autoSizeTextType="uniform"/>

        <SearchView
            android:id="@+id/consumable_searchbox"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_weight="1"
            android:iconifiedByDefault="false"
            android:queryHint="Búsqueda de consumibles">

        </SearchView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/newRecipeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_recipe"
                android:layout_marginEnd="2sp"/>

            <Button
                android:id="@+id/newProductBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_product"
                android:layout_marginStart="2sp"/>
        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            tools:listitem="@layout/consumable_list_item" />

        <Button
            android:id="@+id/registroConsumoBtn"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_weight="1"
            android:text="@string/register_ingest"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#393939"
            android:textColorLink="#919191"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>